--- a/Mawionette.Tests/Mawionette.Tests.fsproj
+++ b/Mawionette.Tests/Mawionette.Tests.fsproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="UnitTest1.fs" />
+    <Compile Include="IntegrationTests.fs" />
+    <Compile Include="UnitTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
